@@ -1,4 +1,5 @@
 
+require 'monitor'
 require 'gtk2'
 
 module Gtk
