@@ -38,6 +38,7 @@ module Redcar
       Command.load
       Keymap.load
       Bundle.load
+      Zerenity::Base.no_main_loop = true
       plugin.transition(FreeBASE::LOADED)
     end
 
