@@ -1,4 +1,3 @@
-
 module Redcar
   class Find < Redcar::EditTabCommand
     key  "Super+F"
@@ -8,8 +7,9 @@ module Redcar
     class FindSpeedbar < Redcar::Speedbar
       label "Find:"
       textbox :query_string
+      toggle :wrap, "Wrap?", "Ctrl+Space"
       button "Go", nil, "Return" do |sb|
-        FindNextRegex.new(Regexp.new(sb.query_string)).do
+        FindNextRegex.new(Regexp.new(sb.query_string), sb.wrap).do
       end
     end
 
