@@ -1,11 +1,12 @@
 module Redcar
   class FindNextRegex < Redcar::EditTabCommand
-    def initialize(re)
+    def initialize(re, wrap=nil)
       @re = re
+      @wrap = wrap
     end
 
     def to_s
-      "#{self.class}: @re=#{@re.inspect}"
+      "<#{self.class}: @re:#{@re.inspect} wrap:#{!!@wrap}>"
     end
 
     def execute
@@ -33,6 +34,10 @@ module Redcar
           unless tab.view.cursor_onscreen?
             tab.view.scroll_mark_onscreen(doc.cursor_mark)
           end
+        end
+        if !doc.get_line(line_num) and @wrap
+          doc.cursor = 0
+          execute
         end
       end
     end
