@@ -65,11 +65,23 @@ Feature: Edit Text
     And I press "Ctrl+U"
     Then I should see "SOME TEXT" in the EditTab
 
+  Scenario: Convert current word to uppercase
+    When I type "Some Text"
+    And I press "Ctrl+A"
+    And I press "Ctrl+U"
+    Then I should see "<c>SOME Text" in the EditTab
+
   Scenario: Convert selected text to lowercase
     When I type "Some Text"
     And I press "Ctrl+Shift+L" 
     And I press "Ctrl+Shift+U"
     Then I should see "some text" in the EditTab
+
+  Scenario: Convert current word to lowercase
+    When I type "Some Text"
+    And I press "Ctrl+E"
+    And I press "Ctrl+Shift+U"
+    Then I should see "Some text<c>" in the EditTab
 
   Scenario: Convert selected uppercase text to titlecase
     When I type "SOME TEXT"
@@ -80,6 +92,11 @@ Feature: Edit Text
   Scenario: Convert selected lowercase text to titlecase
     When I type "some text"
     And I press "Ctrl+Shift+L" 
+    And I press "Ctrl+Alt+U"
+    Then I should see "Some Text" in the EditTab
+
+  Scenario: Convert current line to titlecase
+    When I type "some text"
     And I press "Ctrl+Alt+U"
     Then I should see "Some Text" in the EditTab
     
