@@ -32,6 +32,12 @@ Feature: Create, Open and Save files
     And I save the EditTab
     Then the label of the EditTab should say "file1.rb"
 
+  Scenario: Undoing all the way removes * from the label
+    Given I have opened the file "plugins/edit_tab/features/fixtures/file1.rb"
+    When I type "a"
+    And I press "Ctrl+Z"
+    Then the label of the EditTab should say "file1.rb"
+
   Scenario: Change a file and save it changes the file on disk
     Given I have opened the file "plugins/edit_tab/features/fixtures/file1.rb"
     When I type "changed "
@@ -89,8 +95,9 @@ Feature: Create, Open and Save files
     And I press "Ctrl+Shift+T"
     Then there should be two EditTabs open
 
-
-
-
-
-
+  Scenario: Save a file you do not have permission to modify
+    Given I do not have permission to write to "/etc/X11/xorg.conf"
+    When I open the file "/etc/X11/xorg.conf"
+    And I type "Haha changes can't get saved"
+    And I press "Ctrl+S"
+    Then I should see "don't have permission" in a dialog
