@@ -199,8 +199,10 @@ module Redcar
             (!File.exists?(@filename) and File.writable?(File.dirname(@filename)))
           File.open(@filename, "w") {|f| f.puts document.text}
           self.modified = false
+          true
         else
-          Zerenity::Error(:text => "You don't have the permissions to write to this file.")
+          Zerenity::Error(:text => "You don't have permission to write to this file.")
+          false
         end
       end
     end
